- fix layout shift caused by

--- a/src/app/(app)/globals.css
+++ b/src/app/(app)/globals.css
@@ -57,3 +57,9 @@
     --chart-5: 340 75% 55%;
   }
 }
+
+html body[data-scroll-locked]:not([data-scroll-no-lock]) {
+  min-width: 100%;
+  margin-right: 0 !important;
+  overflow: inherit !important;
+}
